@@ -37,12 +37,12 @@
    <permission-role>Reviewer</permission-role>
   </permission-map>
   <permission-map name="Access contents information"
-                  acquired="True">
+                  acquired="False">
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Reviewer</permission-role>
   </permission-map>
-  <permission-map name="View" acquired="True">
+  <permission-map name="View" acquired="False">
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Reviewer</permission-role>
